welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:1: error: value gris is not a member of object java.awt.Color
setCouleurBrosse(java.awt.Color.gris);
                                ^